# matchbox

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: docs.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/architecture/: data-structures.md  matching-engine.md  multi-instance.md  overview.md
book/src/guide/: configuration.md  getting-started.md  multi-instance-setup.md
book/src/server/: api.md  redis.md  websocket.md
crates/engine/: Cargo.toml
crates/engine/src/: book.rs  lib.rs  matcher.rs  models.rs
crates/server/: Cargo.toml
crates/server/src/: engine_worker.rs  errors.rs  main.rs  redis_sub.rs  state.rs
crates/server/src/routes/: mod.rs  orders.rs  ws.rs
postman/: Matchbox.postman_collection.json  Prediction_Market_Engine.postman_collection.json
